...
    <string name="NewTD">New Draft</string>
    <string name="TitleTD">Add Title</string>
    <string name="SubTD">What Do You Feel?</string>
    <string name="SaveTD">Save</string>
    <string name="TDSavedSuccess">The Text Draft Saved Successfully</string>
    <string name="TDSavedFialed">The Text Draft Did not Saved, Try Again</string>
    <string name="EmptyFields">All Fields Required</string>

    <!-- Edit Text Draft Page -->
    <string name="EditTD">Edit Draft</string>
    <string name="SaveChangesTD">Save Changes</string>
    <string name="DeleteTD">Delete Draft</string>
    <string name="DeleteMessageTD">Are you sure you want to delete this Draft ? </string>
    <string name="DeleteOKTD">Delete</string>
    <string name="DeleteCancleTD">Cancel</string>
    <string name="TDDeletedSuccess">Text Draft Deleted Successfully</string>
    <string name="TDDeletedFialed">The Text Draft Did not Deleted, Try Again</string>
    <string name="TDUpdatedSuccess">Text Draft Updated Successfully</string>
    <string name="TDUpdatedFialed">The Text Draft Did not Updated, Try Again</string>

    <!-- Add Appointment Reminder Page -->
    <string name="AddApp">New Appointment</string>
    <string name="TitleApp">Title</string>
    <string name="DayApp">Day</string>
    <string name="TimeApp">Time</string>
...
