<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_rounded_bg"
    android:id="@+id/drafts"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/main_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/titleofscreen"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:paddingTop="10dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/drafts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleofscreen">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/TabLayoutDraft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="@color/black"
            android:outlineSpotShadowColor="@color/white"
            app:tabSelectedTextColor="@color/white"
            app:tabIndicatorColor="@color/white" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/ViewPagerDraft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_expandable_110_250"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_add_symbol"
        app:aebAnimDurationMillis="175"
        app:aebButtonElevation="7dp"
        app:aebButtonGapDp="20dp"
        app:aebEndAngleDegree="180"
        app:aebIsSelectionMode="false"
        app:aebMainButtonSizeDp="45dp"
        app:aebRippleEffect="true"
        app:aebStartAngleDegree="90"
        app:aebSubButtonSizeDp="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AddVoiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_recorder_microphone"
        app:aebAnimDurationMillis="175"
        app:aebButtonElevation="7dp"
        app:aebButtonGapDp="20dp"
        app:aebEndAngleDegree="180"
        app:aebIsSelectionMode="false"
        app:aebMainButtonSizeDp="45dp"
        app:aebRippleEffect="true"
        app:aebStartAngleDegree="90"
        app:aebSubButtonSizeDp="35dp"
        app:layout_constraintBottom_toTopOf="@id/button_expandable_110_250"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AddTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_text"
        app:aebAnimDurationMillis="175"
        app:aebButtonElevation="7dp"
        app:aebButtonGapDp="20dp"
        app:aebEndAngleDegree="180"
        app:aebIsSelectionMode="false"
        app:aebMainButtonSizeDp="45dp"
        app:aebRippleEffect="true"
        app:aebStartAngleDegree="90"
        app:aebSubButtonSizeDp="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_expandable_110_250" />

</androidx.constraintlayout.widget.ConstraintLayout>
