<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.main.drafts.TextDraftFragment"
    android:id="@+id/TextDraftFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Recyclerview_Text_Draft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:scrollbars="none" />


</RelativeLayout>
